js dawhar hiisen bgaa shvv

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <!-- <link rel="icon" type="image/png" href="assets/favicon.png"/> -->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="index.css">
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway&display=swap" rel="stylesheet"> -->
-    <!-- <script src="https://kit.fontawesome.com/60fa06b939.js" crossorigin="anonymous"></script> -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/60fa06b939.js" crossorigin="anonymous"></script>
     <title>Pizza Hut</title>
 </head>
 <body>
@@ -36,8 +36,8 @@
             <ul class="sub-navbar">
                 <li class="nav-item locations"><a href="branch.html">БАЙРШИЛ</a></li>
                 <li class="nav-item search"><i class="fas fa-search"></i></li>
-                <li class="nav-item user"><a href="account.html"><i class="fas fa-user-circle"></i></a></li>
-                <li class="nav-item cart"><button><i class="fas fa-box"></i></button></li>
+                <li class="nav-item user"><a href="login.html"><i class="fas fa-user-circle"></i></a></li>
+                <li class="nav-item cart"><button><i class="fas fa-shopping-cart"></i></button></li>
             </ul>
         </nav>
     </header>
@@ -66,7 +66,7 @@
             <div class="products-container">
                 <!-- Section Title -->
                 <div class="title-container">
-                    <h1 class="title">ӨНӨӨДРИЙН ОНЦЛОХ</h1>
+                    <h1 class="title">БАГЦ</h1>
                     <a class="sub-title" href="products.html">ЦААШ НЬ</a>
                 </div>
                 <!-- Products Cart Container -->
@@ -77,8 +77,6 @@
                             <img class="img" src="pizzaHut.png" alt="">
                             <div class="hover-box">
                                 <div class="item-btn">
-                                    <button><i class="far fa-heart"></i></button>
-                                    <a href="product.html"><i class="far fa-eye"></i></a>
                                 </div>
                                 <button class="main-btn">САГСАНД НЭМЭХ</button>
                             </div>
@@ -91,8 +89,6 @@
                             <img class="img" src="pizzaHut.png" alt="">
                             <div class="hover-box">
                                 <div class="item-btn">
-                                    <button><i class="far fa-heart"></i></button>
-                                    <a href="product.html"><i class="far fa-eye"></i></button>
                                 </div>
                                 <button class="main-btn">САГСАНД НЭМЭХ</button>
                             </div>
@@ -105,8 +101,6 @@
                             <img class="img" src="pizzaHut.png" alt="">
                             <div class="hover-box">
                                 <div class="item-btn">
-                                    <button><i class="far fa-heart"></i></button>
-                                    <a href="product.html"><i class="far fa-eye"></i></button>
                                 </div>
                                 <button class="main-btn">САГСАНД НЭМЭХ</button>
                             </div>
@@ -119,8 +113,6 @@
                             <img class="img" src="pizzaHut.png" alt="">
                             <div class="hover-box">
                                 <div class="item-btn">
-                                    <button><i class="far fa-heart"></i></button>
-                                    <a href="product.html"><i class="far fa-eye"></i></button>
                                 </div>
                                 <button class="main-btn">САГСАНД НЭМЭХ</button>
                             </div>
@@ -147,8 +139,8 @@
             <div class="products-container even">
                 <!-- Section Title -->
                 <div class="title-container">
-                    <h1 class="title">САНАЛ БОЛГОХ</h1>
-                    <a class="sub-title" href="products.html">SEE MORE</a>
+                    <h1 class="title">НЭМЭЛТ БҮТЭЭГДЭХҮҮН</h1>
+                    <a class="sub-title" href="products.html">ЦААШ НЬ</a>
                 </div>
                 <!-- Products Cart Container -->
                 <div class="product-items-container">
@@ -158,8 +150,6 @@
                             <img class="img" src="pizzaHut.png" alt="">
                             <div class="hover-box">
                                 <div class="item-btn">
-                                    <button><i class="far fa-heart"></i></button>
-                                    <a href="product.html"><i class="far fa-eye"></i></a>
                                 </div>
                                 <button class="main-btn">САГСАНД НЭМЭХ</button>
                             </div>
@@ -172,8 +162,6 @@
                             <img class="img" src="pizzaHut.png" alt="">
                             <div class="hover-box">
                                 <div class="item-btn">
-                                    <button><i class="far fa-heart"></i></button>
-                                    <a href="product.html"><i class="far fa-eye"></i></button>
                                 </div>
                                 <button class="main-btn">САГСАНД НЭМЭХ</button>
                             </div>
@@ -186,8 +174,6 @@
                             <img class="img" src="pizzaHut.png" alt="">
                             <div class="hover-box">
                                 <div class="item-btn">
-                                    <button><i class="far fa-heart"></i></button>
-                                    <a href="product.html"><i class="far fa-eye"></i></button>
                                 </div>
                                 <button class="main-btn">САГСАНД НЭМЭХ</button>
                             </div>
@@ -200,8 +186,6 @@
                             <img class="img" src="pizzaHut.png" alt="">
                             <div class="hover-box">
                                 <div class="item-btn">
-                                    <button><i class="far fa-heart"></i></button>
-                                    <a href="product.html"><i class="far fa-eye"></i></button>
                                 </div>
                                 <button class="main-btn">САГСАНД НЭМЭХ</button>
                             </div>
@@ -228,8 +212,9 @@
             <div class="products-container">
                 <!-- Section Title -->
                 <div class="title-container">
-                    <h1 class="title">ХАМГИЙН ЭРЭЛТТЭЙ</h1>
-                    <a class="sub-title" href="products.html">SEE MORE</a>
+                    <h1 class="title">ПИЦЦА</h1>
+                    <a class="sub-title" href="products.html">
+Бүх Пицца харах</a>
                 </div>
                 <!-- Products Cart Container -->
                 <div class="product-items-container">
@@ -239,8 +224,6 @@
                             <img class="img" src="pizzaHut.png" alt="">
                             <div class="hover-box">
                                 <div class="item-btn">
-                                    <button><i class="far fa-heart"></i></button>
-                                    <a href="product.html"><i class="far fa-eye"></i></a>
                                 </div>
                                 <button class="main-btn">САГСАНД НЭМЭХ</button>
                             </div>
@@ -253,8 +236,6 @@
                             <img class="img" src="pizzaHut.png" alt="">
                             <div class="hover-box">
                                 <div class="item-btn">
-                                    <button><i class="far fa-heart"></i></button>
-                                    <a href="product.html"><i class="far fa-eye"></i></button>
                                 </div>
                                 <button class="main-btn">САГСАНД НЭМЭХ</button>
                             </div>
@@ -267,8 +248,6 @@
                             <img class="img" src="pizzaHut.png" alt="">
                             <div class="hover-box">
                                 <div class="item-btn">
-                                    <button><i class="far fa-heart"></i></button>
-                                    <a href="product.html"><i class="far fa-eye"></i></button>
                                 </div>
                                 <button class="main-btn">САГСАНД НЭМЭХ</button>
                             </div>
@@ -281,8 +260,6 @@
                             <img class="img" src="pizzaHut.png" alt="">
                             <div class="hover-box">
                                 <div class="item-btn">
-                                    <button><i class="far fa-heart"></i></button>
-                                    <a href="product.html"><i class="far fa-eye"></i></a>
                                 </div>
                                 <button class="main-btn">САГСАНД НЭМЭХ</button>
                             </div>
@@ -342,15 +319,26 @@
                 <li class="item"><a href="about.html">Instagram профайл</a></li>
             </ul>
         </div>
-        <!-- Social Links -->
-        <div class="social-links">
-            <a href="http://www.facebook.com"><i class="fab fa-facebook-square"></i></a>
-            <a href="http://www.twitter.com"><i class="fab fa-twitter-square"></i></a>
-            <a href="http://www.instagram.com"><i class="fab fa-instagram-square"></i></a>
-        </div>
         <!-- Copyright Notice -->
         <h6 class="copy-msg">pizzaHut © 2019 Таван Богд Фүүдс Пицца ХХК. Зохиогчийн эрх хуулиар хамгаалагдсан</h6>
     </footer>
-    <script src="main.js"></script>
+    <script>
+        const header = document.querySelector("header");
+        let changed = false;
+    window.addEventListener("scroll", e => {
+        if(window.scrollY > 80 && !changed) 
+        {
+            header.classList.add("white");
+            header.classList.remove("trans");
+            changed = true;
+        }
+        if(window.scrollY <= 80 && changed) 
+        {
+            header.classList.add("trans");
+            header.classList.remove("white");
+            changed = false;
+        }
+})
+    </script>
 </body>
 </html>
