--- a/cart.html
+++ b/cart.html
@@ -30,9 +30,7 @@
                               <div class="row">
                                  <!-- product name  -->
                                  <div class="col-6 card-title">
-                                    <h1 class="mb-4 product_name">ЦЭНХЭР ЦАМЦ</h1>
-                                    <p class="mb-2">ЦАМЦ - ЦЭНХЭР</p>
-                                    <p class="mb-2">ӨНГӨ: ЦЭНХЭР</p>
+                                    <h1 class="mb-4 product_name">Маханд дурлагсад</h1>
                                     <p class="mb-3">ХЭМЖЭЭ: M</p>
                                  </div>
                                  <!-- quantity inc dec -->
@@ -75,10 +73,8 @@
                               <div class="row">
                                  <!-- product name  -->
                                  <div class="col-6 card-title">
-                                    <h1 class="mb-4 product_name">НОГООН ЦАМЦ</h1>
-                                    <p class="mb-2">ЦАМЦ - НОГООН</p>
-                                    <p class="mb-2">ӨНГӨ: НОГООН</p>
-                                    <p class="mb-3">ӨНГӨ: M</p>
+                                    <h1 class="mb-4 product_name">Хавайн</h1>
+                                    <p class="mb-3">ХЭМЖЭЭ: M</p>
                                  </div>
                                  <!-- quantity inc dec -->
                                  <div class="col-6">
