--- a/cart.html
+++ b/cart.html
@@ -1,3 +1,4 @@
+
 <html lang="en">
    <head>
       <!-- Required meta tags -->
@@ -54,7 +55,7 @@
                                     <p><i class="fas fa-heart"></i>АВАХ ХҮСЭЛТЭНД НЭМЭХ</p>
                                  </div>
                                  <div class="col-4 d-flex justify-content-end price_money">
-                                    <h3>₮<span id="itemval">0.00 </span></h3>
+                                    <h3>₮<span id="itemval">0 </span></h3>
                                  </div>
                               </div>
                            </div>
@@ -96,7 +97,7 @@
                                     <p><i class="fas fa-heart"></i>АВАХ ХҮСЭЛТЭНД НЭМЭХ</p>
                                  </div>
                                  <div class="col-4 d-flex justify-content-end price_money">
-                                    <h3>₮<span id="itemval1">0.00 </span> </h3>
+                                    <h3>₮<span id="itemval1">0 </span> </h3>
                                  </div>
                               </div>
                            </div>
@@ -109,16 +110,16 @@
                         <h2 class="product_name mb-5">НИЙТ</h2>
                         <div class="price_indiv d-flex justify-content-between">
                            <p>ТОО ХЭМЖЭЭ</p>
-                           <p>₮<span id="product_total_amt">0.00</span></p>
+                           <p>₮<span id="product_total_amt">0</span></p>
                         </div>
                         <div class="price_indiv d-flex justify-content-between">
                            <p>ХҮРГЭЛТИЙН ТӨЛБӨР</p>
-                           <p>₮<span id="shipping_charge">5000.0</span></p>
+                           <p>₮<span id="shipping_charge">5000</span></p>
                         </div>
                         <hr />
                         <div class="total-amt d-flex justify-content-between font-weight-bold">
                            <p>НИЙТ ТООЦОО</p>
-                           <p>₮<span id="total_cart_amt">5000.00</span></p>
+                           <p>₮<span id="total_cart_amt">5000</span></p>
                         </div>
                         <button class="btn btn-primary text-uppercase">ТООЦОО ХИЙХ</button>
                      </div>
@@ -126,11 +127,10 @@
                      <div class="discount_code mt-3 shadow">
                         <div class="card">
                            <div class="card-body">
-                              <a class="d-flex justify-content-between" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                              <a class="d-flex justify-content-between" data-toggle="collapse" href="#collapseExample" aria-expanded="true" aria-controls="collapseExample">
                               ХӨНГӨЛӨЛТИЙН КУПОН
-                              <span><i class="fas fa-chevron-down pt-1"></i></span>
                               </a>
-                              <div class="collapse" id="collapseExample">
+                              <div class="collapse show" id="collapseExample" style="">
                                  <div class="mt-3">
                                     <input type="text" name="" id="discount_code1" class="form-control font-weight-bold" placeholder="">
                                  </div>
